record data transfer time

--- a/examples/python/benchmark/visualize_nns.ipynb
+++ b/examples/python/benchmark/visualize_nns.ipynb
@@ -53,29 +53,31 @@
     "    row.set_frame_on(False)\n",
     "    row.axis('off')\n",
     "\n",
-    "rows = len(experiments)//3\n",
+    "\n",
+    "rows = len(experiments) // 5\n",
     "cols = 3\n",
-    "fig, axs = plt.subplots(rows, cols, figsize=(18, 4*num))\n",
+    "fig, axs = plt.subplots(rows, cols, figsize=(18, 4 * rows))\n",
     "grid = plt.GridSpec(rows, cols)\n",
-    "for i in range(0, num):\n",
+    "for i in range(0, rows):\n",
     "    ax1 = axs[i][0]\n",
     "    ax2 = axs[i][1]\n",
     "    ax3 = axs[i][2]\n",
-    "    title = experiments[i*3].split(\" \")\n",
+    "    title = experiments[i * 5].split(\" \")\n",
     "    title = \" \".join([title[0], title[2]])\n",
     "    create_subtitle(fig, grid[i, ::], title)\n",
     "    for file, method in zip(files, methods):\n",
     "        xs, t_setup, t_search, t_total = [], [], [], []\n",
-    "        for e in experiments[i*3:i*3+3]:\n",
+    "        for e in experiments[i * 5:i * 5 + 5]:\n",
     "            f = file[e]\n",
+    "            print(e)\n",
     "            xs.append(f['num_points'])\n",
-    "            _t_setup = np.median(f['knn_gpu_setup'])\n",
-    "            _t_search = np.median(f['knn_gpu_search'])\n",
+    "            _t_setup = np.median(f['knn_setup'])\n",
+    "            _t_search = np.median(f['knn_search'])\n",
     "            _t_total = _t_setup + _t_search\n",
     "            t_setup.append(_t_setup)\n",
     "            t_search.append(_t_search)\n",
     "            t_total.append(_t_total)\n",
-    "    \n",
+    "        print(xs, t_setup, t_search, t_total)\n",
     "        ax1.set_title(\"setup time\")\n",
     "        ax1.plot(xs, t_setup, label=method)\n",
     "        ax1.set_xlabel(\"num points\")\n",
@@ -89,7 +91,7 @@
     "        ax3.set_xlabel(\"num points\")\n",
     "        ax3.set_ylabel(\"sec\")\n",
     "        ax3.plot(xs, t_total, label=method)\n",
-    "        \n",
+    "\n",
     "fig.tight_layout()\n",
     "fig.set_facecolor('w')"
    ]
@@ -102,9 +104,10 @@
    "source": [
     "rows = 3\n",
     "cols = 3\n",
-    "fig, axs = plt.subplots(rows, cols, figsize=(18, 4*rows))\n",
+    "fig, axs = plt.subplots(rows, cols, figsize=(18, 4 * rows))\n",
     "grid = plt.GridSpec(rows, cols)\n",
-    "for i, (exp, title) in enumerate(zip([exp_k1, exp_k37, exp_k64], [\"knn=1\", \"knn=37\", \"knn=64\"])):\n",
+    "for i, (exp, title) in enumerate(\n",
+    "        zip([exp_k1, exp_k37, exp_k64], [\"knn=1\", \"knn=37\", \"knn=64\"])):\n",
     "    ax1 = axs[i][0]\n",
     "    ax2 = axs[i][1]\n",
     "    ax3 = axs[i][2]\n",
@@ -114,18 +117,18 @@
     "        for e in exp:\n",
     "            f = file[e]\n",
     "            xs.append(f['num_points'])\n",
-    "            _t_setup = np.median(f['knn_gpu_setup'])\n",
-    "            _t_search = np.median(f['knn_gpu_search'])\n",
+    "            _t_setup = np.median(f['knn_setup'])\n",
+    "            _t_search = np.median(f['knn_search'])\n",
     "            _t_total = _t_setup + _t_search\n",
     "            t_setup.append(_t_setup)\n",
     "            t_search.append(_t_search)\n",
     "            t_total.append(_t_total)\n",
-    "        \n",
+    "\n",
     "        idx_sort = np.argsort(xs)\n",
     "        xs = np.array(xs)[idx_sort]\n",
-    "        t_setup = np.array(t_setup)[idx_sort]\n",
-    "        t_search = np.array(t_search)[idx_sort]\n",
-    "        t_total = np.array(t_total)[idx_sort]\n",
+    "        t_setup = np.log(t_setup)[idx_sort]\n",
+    "        t_search = np.log(t_search)[idx_sort]\n",
+    "        t_total = np.log(t_total)[idx_sort]\n",
     "        ax1.set_title(\"setup time\")\n",
     "        ax1.plot(xs, t_setup, label=method)\n",
     "        ax1.set_xlabel(\"num points\")\n",
@@ -139,15 +142,22 @@
     "        ax3.set_xlabel(\"num points\")\n",
     "        ax3.set_ylabel(\"sec\")\n",
     "        ax3.plot(xs, t_total, label=method)\n",
-    "        \n",
+    "\n",
     "fig.tight_layout()\n",
     "fig.set_facecolor('w')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -161,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
