update visualization notebook

--- a/examples/python/benchmark/visualize_nns.ipynb
+++ b/examples/python/benchmark/visualize_nns.ipynb
@@ -9,7 +9,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.gridspec import SubplotSpec\n",
-    "import pickle"
+    "import pickle\n",
+    "import itertools\n",
+    "from math import ceil, log"
    ]
   },
   {
@@ -47,29 +49,34 @@
     "def create_subtitle(fig: plt.Figure, grid: SubplotSpec, title: str):\n",
     "    \"Sign sets of subplots with title\"\n",
     "    row = fig.add_subplot(grid)\n",
-    "    # the '\\n' is important\n",
     "    row.set_title(f'{title}\\n', fontweight='semibold')\n",
-    "    # hide subplot\n",
     "    row.set_frame_on(False)\n",
     "    row.axis('off')\n",
     "\n",
+    "xaxis_label = \"num_points\"\n",
+    "yaxis_label = \"log(sec)\"\n",
     "\n",
-    "rows = len(experiments) // 5\n",
+    "datasets = ['small_tower', 'kitti_1', 'kitti_2', 'fluid_1000', 's3dis_1', 's3dis_2']\n",
+    "knns = [1 ,37 ,64]\n",
+    "combinations = list(itertools.product(datasets, knns))\n",
+    "\n",
+    "rows = len(combinations)\n",
     "cols = 3\n",
     "fig, axs = plt.subplots(rows, cols, figsize=(18, 4 * rows))\n",
     "grid = plt.GridSpec(rows, cols)\n",
-    "for i in range(0, rows):\n",
+    "\n",
+    "for i, (d, k) in enumerate(combinations):\n",
     "    ax1 = axs[i][0]\n",
     "    ax2 = axs[i][1]\n",
     "    ax3 = axs[i][2]\n",
-    "    title = experiments[i * 5].split(\" \")\n",
+    "    exp = list(filter(lambda x: d in x and f\"k={k}\" in x, experiments))\n",
+    "    title = exp[0].split(\" \")\n",
     "    title = \" \".join([title[0], title[2]])\n",
     "    create_subtitle(fig, grid[i, ::], title)\n",
     "    for file, method in zip(files, methods):\n",
     "        xs, t_setup, t_search, t_total = [], [], [], []\n",
-    "        for e in experiments[i * 5:i * 5 + 5]:\n",
+    "        for e in exp:\n",
     "            f = file[e]\n",
-    "            print(e)\n",
     "            xs.append(f['num_points'])\n",
     "            _t_setup = np.median(f['knn_setup'])\n",
     "            _t_search = np.median(f['knn_search'])\n",
@@ -77,23 +84,31 @@
     "            t_setup.append(_t_setup)\n",
     "            t_search.append(_t_search)\n",
     "            t_total.append(_t_total)\n",
-    "        print(xs, t_setup, t_search, t_total)\n",
+    "        t_setup = np.log(t_setup)\n",
+    "        t_search = np.log(t_search)\n",
+    "        t_total = np.log(t_total)\n",
+    "        ax1.xaxis.set_major_formatter(plt.FuncFormatter(lambda x,_: f\"{int(x/1000)}K\"))\n",
     "        ax1.set_title(\"setup time\")\n",
     "        ax1.plot(xs, t_setup, label=method)\n",
-    "        ax1.set_xlabel(\"num points\")\n",
-    "        ax1.set_ylabel(\"sec\")\n",
+    "        ax1.set_xlabel(xaxis_label)\n",
+    "        ax1.set_ylabel(yaxis_label)\n",
+    "        \n",
+    "        ax2.xaxis.set_major_formatter(plt.FuncFormatter(lambda x,_: f\"{int(x/1000)}K\"))\n",
     "        ax2.set_title(\"search time\")\n",
-    "        ax2.set_xlabel(\"num points\")\n",
-    "        ax2.set_ylabel(\"sec\")\n",
+    "        ax2.set_xlabel(xaxis_label)\n",
+    "        ax2.set_ylabel(yaxis_label)\n",
     "        ax2.plot(xs, t_search, label=method)\n",
     "        ax2.legend()\n",
+    "        \n",
+    "        ax3.xaxis.set_major_formatter(plt.FuncFormatter(lambda x,_: f\"{int(x/1000)}K\"))\n",
     "        ax3.set_title(\"total time\")\n",
-    "        ax3.set_xlabel(\"num points\")\n",
-    "        ax3.set_ylabel(\"sec\")\n",
+    "        ax3.set_xlabel(xaxis_label)\n",
+    "        ax3.set_ylabel(yaxis_label)\n",
     "        ax3.plot(xs, t_total, label=method)\n",
     "\n",
     "fig.tight_layout()\n",
-    "fig.set_facecolor('w')"
+    "fig.set_facecolor('w')\n",
+    "plt.savefig(\"nns_benchmark\")"
    ]
   },
   {
@@ -131,16 +146,16 @@
     "        t_total = np.log(t_total)[idx_sort]\n",
     "        ax1.set_title(\"setup time\")\n",
     "        ax1.plot(xs, t_setup, label=method)\n",
-    "        ax1.set_xlabel(\"num points\")\n",
-    "        ax1.set_ylabel(\"sec\")\n",
+    "        ax1.set_xlabel(xaxis_label)\n",
+    "        ax1.set_ylabel(yaxis_label)\n",
     "        ax2.set_title(\"search time\")\n",
-    "        ax2.set_xlabel(\"num points\")\n",
-    "        ax2.set_ylabel(\"sec\")\n",
+    "        ax2.set_xlabel(xaxis_label)\n",
+    "        ax2.set_ylabel(yaxis_label)\n",
     "        ax2.plot(xs, t_search, label=method)\n",
     "        ax2.legend()\n",
     "        ax3.set_title(\"total time\")\n",
-    "        ax3.set_xlabel(\"num points\")\n",
-    "        ax3.set_ylabel(\"sec\")\n",
+    "        ax3.set_xlabel(xaxis_label)\n",
+    "        ax3.set_ylabel(yaxis_label)\n",
     "        ax3.plot(xs, t_total, label=method)\n",
     "\n",
     "fig.tight_layout()\n",
