update visualization notebook

--- a/examples/python/benchmark/visualize_nns.ipynb
+++ b/examples/python/benchmark/visualize_nns.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "fig.tight_layout()\n",
     "fig.set_facecolor('w')\n",
-    "plt.savefig(\"nns_benchmark\")"
+    "plt.savefig(\"nns_benchmark.pdf\", dpi=150)"
    ]
   },
   {
@@ -140,23 +140,42 @@
     "            t_total.append(_t_total)\n",
     "\n",
     "        idx_sort = np.argsort(xs)\n",
-    "        xs = np.array(xs)[idx_sort]\n",
+    "        num_points = np.array(xs)[idx_sort]\n",
     "        t_setup = np.log(t_setup)[idx_sort]\n",
     "        t_search = np.log(t_search)[idx_sort]\n",
     "        t_total = np.log(t_total)[idx_sort]\n",
+    "        \n",
+    "        ys1, ys2, ys3 = dict(), dict(), dict()\n",
+    "        for i, n in enumerate(num_points):\n",
+    "            if n not in ys1:\n",
+    "                ys1[n] = []\n",
+    "                ys2[n] = []\n",
+    "                ys3[n] = []\n",
+    "            ys1[n].append(t_setup[i])\n",
+    "            ys2[n].append(t_search[i])\n",
+    "            ys3[n].append(t_total[i])\n",
+    "        print(ys1, ys2, ys3)\n",
+    "        xs = list(ys1.keys())\n",
+    "        ys1 = [np.mean(ys1[k]) for k in xs]\n",
+    "        ys2 = [np.mean(ys2[k]) for k in xs]\n",
+    "        ys3 = [np.mean(ys3[k]) for k in xs]\n",
+    "\n",
     "        ax1.set_title(\"setup time\")\n",
-    "        ax1.plot(xs, t_setup, label=method)\n",
+    "        ax1.plot(xs, ys1, label=method)\n",
     "        ax1.set_xlabel(xaxis_label)\n",
     "        ax1.set_ylabel(yaxis_label)\n",
+    "        ax1.xaxis.set_major_formatter(plt.FuncFormatter(lambda x,_: f\"{int(x/1000)}K\"))\n",
     "        ax2.set_title(\"search time\")\n",
     "        ax2.set_xlabel(xaxis_label)\n",
     "        ax2.set_ylabel(yaxis_label)\n",
-    "        ax2.plot(xs, t_search, label=method)\n",
+    "        ax2.plot(xs, ys2, label=method)\n",
     "        ax2.legend()\n",
+    "        ax2.xaxis.set_major_formatter(plt.FuncFormatter(lambda x,_: f\"{int(x/1000)}K\"))\n",
     "        ax3.set_title(\"total time\")\n",
     "        ax3.set_xlabel(xaxis_label)\n",
     "        ax3.set_ylabel(yaxis_label)\n",
-    "        ax3.plot(xs, t_total, label=method)\n",
+    "        ax3.plot(xs, ys3, label=method)\n",
+    "        ax3.xaxis.set_major_formatter(plt.FuncFormatter(lambda x,_: f\"{int(x/1000)}K\"))\n",
     "\n",
     "fig.tight_layout()\n",
     "fig.set_facecolor('w')"
