--- a/examples/python/geometry/file_io.ipynb
+++ b/examples/python/geometry/file_io.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "print(\"Testing IO for point cloud ...\")\n",
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/fragment.pcd\")\n",
+    "pcd = o3d.io.read_point_cloud(o3dtut.get_data_path_common(\"fragment.pcd\"))\n",
     "print(pcd)\n",
     "o3d.io.write_point_cloud(\"copy_of_fragment.pcd\", pcd)"
    ]
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "print(\"Testing IO for meshes ...\")\n",
-    "mesh = o3d.io.read_triangle_mesh(\"../../test_data/knot.ply\")\n",
+    "mesh = o3d.io.read_triangle_mesh(o3dtut.get_data_path_common(\"knot.ply\"))\n",
     "print(mesh)\n",
     "o3d.io.write_triangle_mesh(\"copy_of_knot.ply\", mesh)"
    ]
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "print(\"Testing IO for images ...\")\n",
-    "img = o3d.io.read_image(\"../../test_data/lena_color.jpg\")\n",
+    "img = o3d.io.read_image(o3dtut.get_data_path_common(\"lena_color.jpg\"))\n",
     "print(img)\n",
     "o3d.io.write_image(\"copy_of_lena_color.jpg\", img)"
    ]
@@ -145,7 +145,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -159,9 +159,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
