--- a/examples/python/geometry/half_edge_mesh.ipynb
+++ b/examples/python/geometry/half_edge_mesh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,19 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize a HalfEdgeTriangleMesh from TriangleMesh\n",
-    "mesh = o3d.io.read_triangle_mesh(\"../../test_data/sphere.ply\")\n",
+    "mesh = o3d.io.read_triangle_mesh(o3dtut.get_data_path_common(\"sphere.ply\"))\n",
     "bbox = o3d.geometry.AxisAlignedBoundingBox()\n",
     "bbox.min_bound = [-1, -1, -1]\n",
     "bbox.max_bound = [1, 0.6, 1]\n",
@@ -73,16 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Colorize boundary vertices to red\n",
     "vertex_colors = 0.75 * np.ones((len(het_mesh.vertices), 3))\n",
@@ -105,7 +91,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -119,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
