--- a/examples/python/geometry/pointcloud.ipynb
+++ b/examples/python/geometry/pointcloud.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "print(\"Load a ply point cloud, print it, and render it\")\n",
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/fragment.ply\")\n",
+    "pcd = o3d.io.read_point_cloud(o3dtut.get_data_path_common(\"fragment.ply\"))\n",
     "print(pcd)\n",
     "print(np.asarray(pcd.points))\n",
     "o3d.visualization.draw_geometries([pcd],\n",
@@ -202,8 +202,7 @@
    "outputs": [],
    "source": [
     "print(\"Load a polygon volume and use it to crop the original point cloud\")\n",
-    "vol = o3d.visualization.read_selection_polygon_volume(\n",
-    "    \"../../test_data/Crop/cropped.json\")\n",
+    "vol = o3d.visualization.read_selection_polygon_volume(o3dtut.get_data_path_common(\"Crop/cropped.json\"))\n",
     "chair = vol.crop_point_cloud(pcd)\n",
     "o3d.visualization.draw_geometries([chair],\n",
     "                                  zoom=0.7,\n",
@@ -265,7 +264,7 @@
    "outputs": [],
    "source": [
     "# Load data\n",
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/fragment.ply\")\n",
+    "pcd = o3d.io.read_point_cloud(o3dtut.get_data_path_common(\"fragment.ply\"))\n",
     "vol = o3d.visualization.read_selection_polygon_volume(\n",
     "    \"../../test_data/Crop/cropped.json\")\n",
     "chair = vol.crop_point_cloud(pcd)\n",
@@ -343,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/fragment.ply\")\n",
+    "pcd = o3d.io.read_point_cloud(o3dtut.get_data_path_common(\"fragment.ply\"))\n",
     "\n",
     "with o3d.utility.VerbosityContextManager(\n",
     "        o3d.utility.VerbosityLevel.Debug) as cm:\n",
@@ -389,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/fragment.pcd\")\n",
+    "pcd = o3d.io.read_point_cloud(o3dtut.get_data_path_common(\"fragment.pcd\"))\n",
     "plane_model, inliers = pcd.segment_plane(distance_threshold=0.01,\n",
     "                                         ransac_n=3,\n",
     "                                         num_iterations=1000)\n",
@@ -449,7 +448,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -463,9 +462,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
