--- a/examples/python/geometry/working_with_numpy.ipynb
+++ b/examples/python/geometry/working_with_numpy.ipynb
@@ -68,7 +68,7 @@
     "# Pass xyz to Open3D.o3d.geometry.PointCloud and visualize\n",
     "pcd = o3d.geometry.PointCloud()\n",
     "pcd.points = o3d.utility.Vector3dVector(xyz)\n",
-    "o3d.io.write_point_cloud(\"../../test_data/sync.ply\", pcd)"
+    "o3d.io.write_point_cloud(o3dtut.get_data_path_common(\"sync.ply\"), pcd)"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "# Load saved point cloud and visualize it\n",
-    "pcd_load = o3d.io.read_point_cloud(\"../../test_data/sync.ply\")\n",
+    "pcd_load = o3d.io.read_point_cloud(o3dtut.get_data_path_common(\"sync.ply\"))\n",
     "\n",
     "# Convert Open3D.o3d.geometry.PointCloud to numpy array\n",
     "xyz_load = np.asarray(pcd_load.points)\n",
@@ -94,12 +94,19 @@
     "print(xyz_load)\n",
     "o3d.visualization.draw_geometries([pcd_load])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -113,9 +120,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
