--- a/examples/python/visualization/jupyter_visualization.ipynb
+++ b/examples/python/visualization/jupyter_visualization.ipynb
@@ -37,7 +37,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -51,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
