--- a/examples/python/visualization/visualization.ipynb
+++ b/examples/python/visualization/visualization.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "print(\"Load a ply point cloud, print it, and render it\")\n",
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/fragment.ply\")\n",
+    "pcd = o3d.io.read_point_cloud(o3dtut.get_data_path_common(\"fragment.ply\"))\n",
     "o3d.visualization.draw_geometries([pcd],\n",
     "                                  zoom=0.3412,\n",
     "                                  front=[0.4257, -0.2125, -0.8795],\n",
@@ -228,7 +228,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -242,9 +242,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
