--- a/examples/python/geometry/pointcloud.ipynb
+++ b/examples/python/geometry/pointcloud.ipynb
@@ -202,7 +202,8 @@
    "outputs": [],
    "source": [
     "print(\"Load a polygon volume and use it to crop the original point cloud\")\n",
-    "vol = o3d.visualization.read_selection_polygon_volume(o3dtut.get_data_path_common(\"Crop/cropped.json\"))\n",
+    "vol = o3d.visualization.read_selection_polygon_volume(\n",
+    "    o3dtut.get_data_path_common(\"Crop/cropped.json\"))\n",
     "chair = vol.crop_point_cloud(pcd)\n",
     "o3d.visualization.draw_geometries([chair],\n",
     "                                  zoom=0.7,\n",
