--- a/examples/python/geometry/pointcloud_outlier_removal.ipynb
+++ b/examples/python/geometry/pointcloud_outlier_removal.ipynb
@@ -43,7 +43,8 @@
    "outputs": [],
    "source": [
     "print(\"Load a ply point cloud, print it, and render it\")\n",
-    "pcd = o3d.io.read_point_cloud(o3dtut.get_data_path_common(\"ICP/cloud_bin_2.pcd\"))\n",
+    "pcd = o3d.io.read_point_cloud(\n",
+    "    o3dtut.get_data_path_common(\"ICP/cloud_bin_2.pcd\"))\n",
     "o3d.visualization.draw_geometries([pcd],\n",
     "                                  zoom=0.3412,\n",
     "                                  front=[0.4257, -0.2125, -0.8795],\n",
