--- a/examples/python/geometry/python_interface.ipynb
+++ b/examples/python/geometry/python_interface.ipynb
@@ -50,7 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = o3d.io.read_point_cloud(o3dtut.get_data_path_common(\"ICP/cloud_bin_0.pcd\"))\n",
+    "pcd = o3d.io.read_point_cloud(\n",
+    "    o3dtut.get_data_path_common(\"ICP/cloud_bin_0.pcd\"))\n",
     "print(pcd)"
    ]
   },
