--- a/examples/python/geometry/file_io.ipynb
+++ b/examples/python/geometry/file_io.ipynb
@@ -72,7 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/my_points.txt\", format='xyz')"
+    "pcd = o3d.io.read_point_cloud(o3dtut.get_data_path_common(\"my_points.txt\"),\n",
+    "                              format='xyz')"
    ]
   },
   {
