--- a/examples/python/pipelines/colored_pointcloud_registration.ipynb
+++ b/examples/python/pipelines/colored_pointcloud_registration.ipynb
@@ -68,8 +68,10 @@
    "outputs": [],
    "source": [
     "print(\"1. Load two point clouds and show initial pose\")\n",
-    "source = o3d.io.read_point_cloud(\"../../test_data/ColoredICP/frag_115.ply\")\n",
-    "target = o3d.io.read_point_cloud(\"../../test_data/ColoredICP/frag_116.ply\")\n",
+    "source = o3d.io.read_point_cloud(\n",
+    "    o3dtut.get_data_path_common(\"ColoredICP/frag_115.ply\"))\n",
+    "target = o3d.io.read_point_cloud(\n",
+    "    o3dtut.get_data_path_common(\"ColoredICP/frag_116.ply\"))\n",
     "\n",
     "# draw initial alignment\n",
     "current_transformation = np.identity(4)\n",
@@ -189,7 +191,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -203,9 +205,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
