--- a/examples/python/pipelines/global_registration.ipynb
+++ b/examples/python/pipelines/global_registration.ipynb
@@ -104,8 +104,10 @@
    "source": [
     "def prepare_dataset(voxel_size):\n",
     "    print(\":: Load two point clouds and disturb initial pose.\")\n",
-    "    source = o3d.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_0.pcd\")\n",
-    "    target = o3d.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_1.pcd\")\n",
+    "    source = o3d.io.read_point_cloud(\n",
+    "        o3dtut.get_data_path_common(\"ICP/cloud_bin_0.pcd\"))\n",
+    "    target = o3d.io.read_point_cloud(\n",
+    "        o3dtut.get_data_path_common(\"ICP/cloud_bin_1.pcd\"))\n",
     "    trans_init = np.asarray([[0.0, 0.0, 1.0, 0.0], [1.0, 0.0, 0.0, 0.0],\n",
     "                             [0.0, 1.0, 0.0, 0.0], [0.0, 0.0, 0.0, 1.0]])\n",
     "    source.transform(trans_init)\n",
@@ -344,7 +346,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -358,9 +360,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
