--- a/examples/python/pipelines/icp_registration.ipynb
+++ b/examples/python/pipelines/icp_registration.ipynb
@@ -91,8 +91,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = o3d.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_0.pcd\")\n",
-    "target = o3d.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_1.pcd\")\n",
+    "source = o3d.io.read_point_cloud(\n",
+    "    o3dtut.get_data_path_common(\"ICP/cloud_bin_0.pcd\"))\n",
+    "target = o3d.io.read_point_cloud(\n",
+    "    o3dtut.get_data_path_common(\"ICP/cloud_bin_1.pcd\"))\n",
     "threshold = 0.02\n",
     "trans_init = np.asarray([[0.862, 0.011, -0.507, 0.5],\n",
     "                         [-0.139, 0.967, -0.215, 0.7],\n",
@@ -238,7 +240,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -252,9 +254,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
