--- a/examples/python/pipelines/multiway_registration.ipynb
+++ b/examples/python/pipelines/multiway_registration.ipynb
@@ -47,8 +47,8 @@
     "def load_point_clouds(voxel_size=0.0):\n",
     "    pcds = []\n",
     "    for i in range(3):\n",
-    "        pcd = o3d.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_%d.pcd\" %\n",
-    "                                      i)\n",
+    "        pcd = o3d.io.read_point_cloud(\n",
+    "            o3dtut.get_data_path_common(\"ICP/cloud_bin_%d.pcd\" % i))\n",
     "        pcd_down = pcd.voxel_down_sample(voxel_size=voxel_size)\n",
     "        pcds.append(pcd_down)\n",
     "    return pcds"
@@ -261,7 +261,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -275,9 +275,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
