--- a/examples/python/pipelines/rgbd_integration.ipynb
+++ b/examples/python/pipelines/rgbd_integration.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "camera_poses = read_trajectory(\"../../test_data/RGBD/odometry.log\")"
+    "camera_poses = read_trajectory(o3dtut.get_data_path_common(\"RGBD/odometry.log\"))"
    ]
   },
   {
@@ -114,8 +114,10 @@
     "\n",
     "for i in range(len(camera_poses)):\n",
     "    print(\"Integrate {:d}-th image into the volume.\".format(i))\n",
-    "    color = o3d.io.read_image(\"../../test_data/RGBD/color/{:05d}.jpg\".format(i))\n",
-    "    depth = o3d.io.read_image(\"../../test_data/RGBD/depth/{:05d}.png\".format(i))\n",
+    "    color = o3d.io.read_image(\n",
+    "        o3dtut.get_data_path_common(\"RGBD/color/{:05d}.jpg\".format(i)))\n",
+    "    depth = o3d.io.read_image(\n",
+    "        o3dtut.get_data_path_common(\"RGBD/depth/{:05d}.png\".format(i)))\n",
     "    rgbd = o3d.geometry.RGBDImage.create_from_color_and_depth(\n",
     "        color, depth, depth_trunc=4.0, convert_rgb_to_intensity=False)\n",
     "    volume.integrate(\n",
@@ -166,7 +168,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -180,9 +182,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
