--- a/examples/python/pipelines/rgbd_odometry.ipynb
+++ b/examples/python/pipelines/rgbd_odometry.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "pinhole_camera_intrinsic = o3d.io.read_pinhole_camera_intrinsic(\n",
-    "    \"../../test_data/camera_primesense.json\")\n",
+    "    o3dtut.get_data_path_common(\"camera_primesense.json\"))\n",
     "print(pinhole_camera_intrinsic.intrinsic_matrix)"
    ]
   },
@@ -74,10 +74,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_color = o3d.io.read_image(\"../../test_data/RGBD/color/00000.jpg\")\n",
-    "source_depth = o3d.io.read_image(\"../../test_data/RGBD/depth/00000.png\")\n",
-    "target_color = o3d.io.read_image(\"../../test_data/RGBD/color/00001.jpg\")\n",
-    "target_depth = o3d.io.read_image(\"../../test_data/RGBD/depth/00001.png\")\n",
+    "source_color = o3d.io.read_image(\n",
+    "    o3dtut.get_data_path_common(\"RGBD/color/00000.jpg\"))\n",
+    "source_depth = o3d.io.read_image(\n",
+    "    o3dtut.get_data_path_common(\"RGBD/depth/00000.png\"))\n",
+    "target_color = o3d.io.read_image(\n",
+    "    o3dtut.get_data_path_common(\"RGBD/color/00001.jpg\"))\n",
+    "target_depth = o3d.io.read_image(\n",
+    "    o3dtut.get_data_path_common(\"RGBD/depth/00001.png\"))\n",
     "source_rgbd_image = o3d.geometry.RGBDImage.create_from_color_and_depth(\n",
     "    source_color, source_depth)\n",
     "target_rgbd_image = o3d.geometry.RGBDImage.create_from_color_and_depth(\n",
@@ -181,7 +185,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -195,9 +199,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
