tested all the tutorial notebooks

--- a/examples/python/geometry/python_interface.ipynb
+++ b/examples/python/geometry/python_interface.ipynb
@@ -28,7 +28,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import open3d as o3d"
+    "import open3d as o3d\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "import open3d_tutorial as o3dtut"
    ]
   },
   {
