--- a/examples/python/geometry/file_io.ipynb
+++ b/examples/python/geometry/file_io.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -38,9 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing IO for point cloud ...\n",
+      "PointCloud with 113662 points.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"Testing IO for point cloud ...\")\n",
     "pcd = o3d.io.read_point_cloud(o3dtut.get_data_path_common(\"fragment.pcd\"))\n",
@@ -68,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,9 +105,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing IO for meshes ...\n",
+      "TriangleMesh with 1440 points and 2880 triangles.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"Testing IO for meshes ...\")\n",
     "mesh = o3d.io.read_triangle_mesh(o3dtut.get_data_path_common(\"knot.ply\"))\n",
@@ -123,9 +161,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing IO for images ...\n",
+      "Image of size 512x512, with 3 channels.\n",
+      "Use numpy.asarray to access buffer data.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"Testing IO for images ...\")\n",
     "img = o3d.io.read_image(o3dtut.get_data_path_common(\"lena_color.jpg\"))\n",
@@ -160,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
