--- a/examples/python/core/hashmap.ipynb
+++ b/examples/python/core/hashmap.ipynb
@@ -37,11 +37,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hashmap = o3c.HashMap(capacity, \n",
-    "                      key_dtype=o3c.int64, \n",
-    "                      key_element_shape=(1), \n",
-    "                      value_dtype=o3c.int64, \n",
-    "                      value_element_shape=(1), \n",
+    "hashmap = o3c.HashMap(capacity,\n",
+    "                      key_dtype=o3c.int64,\n",
+    "                      key_element_shape=(1),\n",
+    "                      value_dtype=o3c.int64,\n",
+    "                      value_element_shape=(1),\n",
     "                      device=device)"
    ]
   },
@@ -59,7 +59,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keys = o3c.Tensor([100, 200, 400, 800, 300, 200, 100], dtype=o3c.int64, device=device)\n",
+    "keys = o3c.Tensor([100, 200, 400, 800, 300, 200, 100],\n",
+    "                  dtype=o3c.int64,\n",
+    "                  device=device)\n",
     "vals = o3c.Tensor([1, 2, 4, 8, 3, 2, 1], dtype=o3c.int64, device=device)\n",
     "buf_indices, masks = hashmap.insert(keys, vals)"
    ]
@@ -167,7 +169,9 @@
     }
    ],
    "source": [
-    "query_keys = o3c.Tensor([1000, 100, 300, 200, 100, 0], dtype=o3c.int64, device=device)\n",
+    "query_keys = o3c.Tensor([1000, 100, 300, 200, 100, 0],\n",
+    "                        dtype=o3c.int64,\n",
+    "                        device=device)\n",
     "buf_indices, masks = hashmap.find(query_keys)\n",
     "valid_keys = query_keys[masks]\n",
     "buf_indices = buf_indices[masks].to(o3c.int64)\n",
@@ -311,7 +315,9 @@
     "\n",
     "buf_vals = hashmap.value_tensor()\n",
     "# Note the assigned tensor has to be strictly in the shape of (N, 1) due to broadcasting\n",
-    "buf_vals[buf_indices[masks].to(o3c.int64)] = o3c.Tensor([[10], [0]], dtype=o3c.int64, device=device)\n",
+    "buf_vals[buf_indices[masks].to(o3c.int64)] = o3c.Tensor([[10], [0]],\n",
+    "                                                        dtype=o3c.int64,\n",
+    "                                                        device=device)\n",
     "print_active_entries(hashmap)"
    ]
   },
@@ -467,15 +473,21 @@
     }
    ],
    "source": [
-    "mhashmap = o3c.HashMap(capacity, \n",
-    "                       key_dtype=o3c.int32, \n",
-    "                       key_element_shape=(3), \n",
-    "                       value_dtypes=(o3c.uint8, o3c.float32), \n",
-    "                       value_element_shapes=(3, 1), \n",
+    "mhashmap = o3c.HashMap(capacity,\n",
+    "                       key_dtype=o3c.int32,\n",
+    "                       key_element_shape=(3),\n",
+    "                       value_dtypes=(o3c.uint8, o3c.float32),\n",
+    "                       value_element_shapes=(3, 1),\n",
     "                       device=device)\n",
-    "voxel_coords = o3c.Tensor([[0, 1, 0], [-1, 2, 3], [3, 4, 1]], dtype=o3c.int32, device=device)\n",
-    "voxel_colors = o3c.Tensor([[0, 255, 0], [255, 255, 0], [255, 0, 0]], dtype=o3c.uint8, device=device)\n",
-    "voxel_weights = o3c.Tensor([[0.9], [0.1], [0.3]], dtype=o3c.float32, device=device)\n",
+    "voxel_coords = o3c.Tensor([[0, 1, 0], [-1, 2, 3], [3, 4, 1]],\n",
+    "                          dtype=o3c.int32,\n",
+    "                          device=device)\n",
+    "voxel_colors = o3c.Tensor([[0, 255, 0], [255, 255, 0], [255, 0, 0]],\n",
+    "                          dtype=o3c.uint8,\n",
+    "                          device=device)\n",
+    "voxel_weights = o3c.Tensor([[0.9], [0.1], [0.3]],\n",
+    "                           dtype=o3c.float32,\n",
+    "                           device=device)\n",
     "mhashmap.insert(voxel_coords, (voxel_colors, voxel_weights))"
    ]
   },
@@ -552,6 +564,8 @@
     "    for i in range(n_buffers):\n",
     "        active_val_i = mhashmap.value_tensor(i)[active_buf_indices]\n",
     "        print('active value {}:'.format(i), active_val_i)\n",
+    "\n",
+    "\n",
     "print_active_multivalue_entries(mhashmap)"
    ]
   },
@@ -583,17 +597,22 @@
     }
    ],
    "source": [
-    "hashset = o3c.HashSet(capacity, key_dtype=o3c.int64, key_element_shape=(1), device=device)\n",
+    "hashset = o3c.HashSet(capacity,\n",
+    "                      key_dtype=o3c.int64,\n",
+    "                      key_element_shape=(1),\n",
+    "                      device=device)\n",
     "keys = o3c.Tensor([1, 3, 5, 7, 5, 3, 1], dtype=o3c.int64, device=device)\n",
     "hashset.insert(keys)\n",
     "\n",
     "keys = o3c.Tensor([5, 7, 9, 11], dtype=o3c.int64, device=device)\n",
     "hashset.insert(keys)\n",
     "\n",
+    "\n",
     "def print_active_keys(hashset):\n",
-    "    active_buf_indices = hashset.active_buf_indices().to(o3c.int64)    \n",
+    "    active_buf_indices = hashset.active_buf_indices().to(o3c.int64)\n",
     "    active_keys = hashset.key_tensor()[active_buf_indices]\n",
     "    print('active keys:', active_keys)\n",
+    "\n",
     "\n",
     "print_active_keys(hashset)"
    ]
