--- a/examples/python/core/hashmap.ipynb
+++ b/examples/python/core/hashmap.ipynb
@@ -116,8 +116,8 @@
     "keys = o3c.Tensor([[100], [200], [400], [800], [300], [200], [100]],\n",
     "                  dtype=o3c.int64,\n",
     "                  device=device)\n",
-    "vals = o3c.Tensor([[1], [2], [4], [8], [3], [2], [1]], \n",
-    "                  dtype=o3c.int64, \n",
+    "vals = o3c.Tensor([[1], [2], [4], [8], [3], [2], [1]],\n",
+    "                  dtype=o3c.int64,\n",
     "                  device=device)\n",
     "buf_indices, masks = hashmap.insert(keys, vals)"
    ]
@@ -321,9 +321,7 @@
     }
    ],
    "source": [
-    "erase_keys = o3c.Tensor([[100], [1000], [100]], \n",
-    "                        dtype=o3c.int64, \n",
-    "                        device=device)\n",
+    "erase_keys = o3c.Tensor([[100], [1000], [100]], dtype=o3c.int64, device=device)\n",
     "masks = hashmap.erase(erase_keys)\n",
     "print('erase masks:\\n', masks)\n",
     "print('erased keys:\\n', erase_keys[masks])"
@@ -401,9 +399,7 @@
     }
    ],
    "source": [
-    "activate_keys = o3c.Tensor([[1000], [0]], \n",
-    "                           dtype=o3c.int64, \n",
-    "                           device=device)\n",
+    "activate_keys = o3c.Tensor([[1000], [0]], dtype=o3c.int64, device=device)\n",
     "buf_indices, masks = hashmap.activate(activate_keys)\n",
     "\n",
     "buf_vals = hashmap.value_tensor()\n",
@@ -496,23 +492,15 @@
     "print('size:', hashmap.size())\n",
     "print('capacity:', hashmap.capacity())\n",
     "\n",
-    "keys = o3c.Tensor([[700], [1200], [1500]], \n",
-    "                  dtype=o3c.int64, \n",
-    "                  device=device)\n",
-    "vals = o3c.Tensor([[7], [12], [-1]], \n",
-    "                  dtype=o3c.int64, \n",
-    "                  device=device)\n",
+    "keys = o3c.Tensor([[700], [1200], [1500]], dtype=o3c.int64, device=device)\n",
+    "vals = o3c.Tensor([[7], [12], [-1]], dtype=o3c.int64, device=device)\n",
     "buf_indices, masks = hashmap.insert(keys, vals)\n",
     "print('size:', hashmap.size())\n",
     "print('capacity:', hashmap.capacity())\n",
     "print_active_entries(hashmap)\n",
     "\n",
-    "keys = o3c.Tensor([[1600], [1700], [1800]], \n",
-    "                  dtype=o3c.int64, \n",
-    "                  device=device)\n",
-    "vals = o3c.Tensor([[16], [17], [18]], \n",
-    "                  dtype=o3c.int64, \n",
-    "                  device=device)\n",
+    "keys = o3c.Tensor([[1600], [1700], [1800]], dtype=o3c.int64, device=device)\n",
+    "vals = o3c.Tensor([[16], [17], [18]], dtype=o3c.int64, device=device)\n",
     "buf_indices, masks = hashmap.insert(keys, vals)\n",
     "print('size:', hashmap.size())\n",
     "print('capacity:', hashmap.capacity())\n",
@@ -719,10 +707,12 @@
     "                      key_dtype=o3c.int64,\n",
     "                      key_element_shape=(1,),\n",
     "                      device=device)\n",
-    "keys = o3c.Tensor([1, 3, 5, 7, 5, 3, 1], dtype=o3c.int64, device=device).reshape((-1, 1))\n",
+    "keys = o3c.Tensor([1, 3, 5, 7, 5, 3, 1], dtype=o3c.int64,\n",
+    "                  device=device).reshape((-1, 1))\n",
     "hashset.insert(keys)\n",
     "\n",
-    "keys = o3c.Tensor([5, 7, 9, 11], dtype=o3c.int64, device=device).reshape((-1, 1))\n",
+    "keys = o3c.Tensor([5, 7, 9, 11], dtype=o3c.int64, device=device).reshape(\n",
+    "    (-1, 1))\n",
     "hashset.insert(keys)\n",
     "\n",
     "\n",
