Expose API for Fast Global Registration given correspondences (#4188)

--- a/examples/python/pipelines/global_registration.ipynb
+++ b/examples/python/pipelines/global_registration.ipynb
@@ -304,7 +304,7 @@
     "    distance_threshold = voxel_size * 0.5\n",
     "    print(\":: Apply fast global registration with distance threshold %.3f\" \\\n",
     "            % distance_threshold)\n",
-    "    result = o3d.pipelines.registration.registration_fast_based_on_feature_matching(\n",
+    "    result = o3d.pipelines.registration.registration_fgr_based_on_feature_matching(\n",
     "        source_down, target_down, source_fpfh, target_fpfh,\n",
     "        o3d.pipelines.registration.FastGlobalRegistrationOption(\n",
     "            maximum_correspondence_distance=distance_threshold))\n",
@@ -334,6 +334,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition to FPFH-feature-based FGR, global registration can be performed with correspondence-based FGR via `registration_fgr_based_on_correspondence`. This method is useful if your correspondence frontend is different than FPFH, but you would still like to use FGR given a set of putative correspondences. It can be called with\n",
+    "\n",
+    "```python\n",
+    "o3d.pipelines.registration.registration_fgr_based_on_correspondence(\n",
+    "        source_down, target_down, correspondence_set,\n",
+    "        o3d.pipelines.registration.FastGlobalRegistrationOption())\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -344,7 +357,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -358,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
