Add Holes filling algorithm for CPU TSDF Pipelines.
This is as described in Section 4 of the original paper. Note: This
change has been made intentionally backwards compatible, so no
`extract_triangle_mesh` calls change the behavior.

This simple fix is usually missing on most TSDF implementations, and
depending on the application it might be a desired behavior(mostly when
reconstructing "objects" and not scenes).

--- a/examples/python/pipelines/rgbd_integration.ipynb
+++ b/examples/python/pipelines/rgbd_integration.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "source": [
     "## Extract a mesh\n",
-    "Mesh extraction uses the marching cubes algorithm [\\[LorensenAndCline1987\\]](../reference.html#lorensenandcline1987)."
+    "Mesh extraction uses the marching cubes algorithm [\\[LorensenAndCline1987\\]](../reference.html#lorensenandcline1987). You can also specify the mesh extraction algorithm to fill some holes, as described in section _\"4 Hole Filling\"_ in [\\[Curless1996\\]](../reference.html#curless1996)."
    ]
   },
   {
@@ -141,6 +141,22 @@
    "source": [
     "print(\"Extract a triangle mesh from the volume and visualize it.\")\n",
     "mesh = volume.extract_triangle_mesh()\n",
+    "mesh.compute_vertex_normals()\n",
+    "o3d.visualization.draw_geometries([mesh],\n",
+    "                                  front=[0.5297, -0.1873, -0.8272],\n",
+    "                                  lookat=[2.0712, 2.0312, 1.7251],\n",
+    "                                  up=[-0.0558, -0.9809, 0.1864],\n",
+    "                                  zoom=0.47)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Extract a triangle mesh, from the volume(using the hole filling algorithm) and visualize it.\")\n",
+    "mesh = volume.extract_triangle_mesh(fill_holes=True)\n",
     "mesh.compute_vertex_normals()\n",
     "o3d.visualization.draw_geometries([mesh],\n",
     "                                  front=[0.5297, -0.1873, -0.8272],\n",
