--- a/examples/python/pipelines/rgbd_integration.ipynb
+++ b/examples/python/pipelines/rgbd_integration.ipynb
@@ -155,7 +155,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Extract a triangle mesh, from the volume(using the hole filling algorithm) and visualize it.\")\n",
+    "print(\n",
+    "    \"Extract a triangle mesh, from the volume(using the hole filling algorithm) and visualize it.\"\n",
+    ")\n",
     "mesh = volume.extract_triangle_mesh(fill_holes=True)\n",
     "mesh.compute_vertex_normals()\n",
     "o3d.visualization.draw_geometries([mesh],\n",
