adapt tutorial to renamed vertex positions

--- a/examples/python/geometry/distance_queries.ipynb
+++ b/examples/python/geometry/distance_queries.ipynb
@@ -157,8 +157,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "min_bound = mesh.vertices['vertices'].min(0).numpy()\n",
-    "max_bound = mesh.vertices['vertices'].max(0).numpy()\n",
+    "min_bound = mesh.vertex['positions'].min(0).numpy()\n",
+    "max_bound = mesh.vertex['positions'].max(0).numpy()\n",
     "\n",
     "N = 256\n",
     "query_points = np.random.uniform(low=min_bound, high=max_bound,\n",
