fix color map optimization

--- a/examples/python/pipelines/color_map_optimization.ipynb
+++ b/examples/python/pipelines/color_map_optimization.ipynb
@@ -129,10 +129,10 @@
    "source": [
     "# Before full optimization, let's visualize texture map\n",
     "# with given geometry, RGBD images, and camera poses.\n",
-    "mesh_optimized = o3d.pipelines.color_map.run_rigid_optimizer(\n",
+    "mesh, camera_trajectory = o3d.pipelines.color_map.run_rigid_optimizer(\n",
     "    mesh, rgbd_images, camera_trajectory,\n",
     "    o3d.pipelines.color_map.RigidOptimizerOption(maximum_iteration=0))\n",
-    "o3d.visualization.draw_geometries([mesh_optimized],\n",
+    "o3d.visualization.draw_geometries([mesh],\n",
     "                                  zoom=0.5399,\n",
     "                                  front=[0.0665, -0.1107, -0.9916],\n",
     "                                  lookat=[0.7353, 0.6537, 1.0521],\n",
@@ -165,12 +165,12 @@
     "maximum_iteration = 100 if is_ci else 300\n",
     "with o3d.utility.VerbosityContextManager(\n",
     "        o3d.utility.VerbosityLevel.Debug) as cm:\n",
-    "    mesh_optimized = o3d.pipelines.color_map.run_rigid_optimizer(\n",
+    "    mesh, camera_trajectory = o3d.pipelines.color_map.run_rigid_optimizer(\n",
     "        mesh, rgbd_images, camera_trajectory,\n",
     "        o3d.pipelines.color_map.RigidOptimizerOption(\n",
     "            maximum_iteration=maximum_iteration))\n",
     "\n",
-    "o3d.visualization.draw_geometries([mesh_optimized],\n",
+    "o3d.visualization.draw_geometries([mesh],\n",
     "                                  zoom=0.5399,\n",
     "                                  front=[0.0665, -0.1107, -0.9916],\n",
     "                                  lookat=[0.7353, 0.6537, 1.0521],\n",
@@ -202,7 +202,7 @@
     "maximum_iteration = 100 if is_ci else 300\n",
     "with o3d.utility.VerbosityContextManager(\n",
     "        o3d.utility.VerbosityLevel.Debug) as cm:\n",
-    "    mesh_optimized = o3d.pipelines.color_map.run_non_rigid_optimizer(\n",
+    "    mesh, camera_trajectory = o3d.pipelines.color_map.run_non_rigid_optimizer(\n",
     "        mesh, rgbd_images, camera_trajectory,\n",
     "        o3d.pipelines.color_map.NonRigidOptimizerOption(\n",
     "            maximum_iteration=maximum_iteration))"
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "o3d.visualization.draw_geometries([mesh_optimized],\n",
+    "o3d.visualization.draw_geometries([mesh],\n",
     "                                  zoom=0.5399,\n",
     "                                  front=[0.0665, -0.1107, -0.9916],\n",
     "                                  lookat=[0.7353, 0.6537, 1.0521],\n",
