--- a/docs/jupyter/geometry/ray_casting.ipynb
+++ b/docs/jupyter/geometry/ray_casting.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "The `RaycastingScene` class in Open3D provides basic ray casting functionality.\n",
     "In this tutorial we show how to create a scene and do ray intersection tests. \n",
-    "You can also use `RayCastingScene` to create a virtual point cloud from a mesh, \n",
+    "You can also use `RaycastingScene` to create a virtual point cloud from a mesh, \n",
     "such as from a CAD model."
    ]
   },
@@ -206,7 +206,7 @@
     "`RaycastingScene` allows to organize rays with an arbitrary number of leading dimensions.\n",
     "For instance we can generate an array with shape `[h,w,6]` to organize rays for creating an image.\n",
     "The class also provides helper functions for creating rays for a pinhole camera.\n",
-    "The following creates rays Tensor with shape `[240,320,6]`."
+    "The following creates rays Tensor with shape `[480,640,6]`."
    ]
   },
   {
@@ -223,7 +223,7 @@
     "    width_px=640,\n",
     "    height_px=480,\n",
     ")\n",
-    "# Ee can directly pass the rays tensor to the cast_rays function.\n",
+    "# We can directly pass the rays tensor to the cast_rays function.\n",
     "ans = scene.cast_rays(rays)"
    ]
   },
