--- a/docs/jupyter/geometry/file_io.ipynb
+++ b/docs/jupyter/geometry/file_io.ipynb
@@ -127,9 +127,9 @@
    "outputs": [],
    "source": [
     "print(\"Testing IO for images ...\")\n",
-    "img = o3d.io.read_image(\"../../test_data/lena_color.jpg\")\n",
+    "img = o3d.io.read_image(\"../../test_data/Juneau.jpg\")\n",
     "print(img)\n",
-    "o3d.io.write_image(\"copy_of_lena_color.jpg\", img)"
+    "o3d.io.write_image(\"copy_of_Juneau.jpg\", img)"
    ]
   },
   {
