added bunny to examples, added more datasets

--- a/docs/jupyter/geometry/mesh.ipynb
+++ b/docs/jupyter/geometry/mesh.ipynb
@@ -362,8 +362,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesh = o3dtut.get_bunny_mesh()\n",
+    "bunny = o3d.data.Bunny()\n",
+    "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
     "mesh.compute_vertex_normals()\n",
+    "\n",
     "o3d.visualization.draw_geometries([mesh])\n",
     "pcd = mesh.sample_points_uniformly(number_of_points=500)\n",
     "o3d.visualization.draw_geometries([pcd])"
@@ -400,7 +402,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesh = o3dtut.get_bunny_mesh()\n",
+    "bunny = o3d.data.Bunny()\n",
+    "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
+    "mesh.compute_vertex_normals()\n",
+    "\n",
     "pcd = mesh.sample_points_poisson_disk(number_of_points=500, init_factor=5)\n",
     "o3d.visualization.draw_geometries([pcd])\n",
     "\n",
@@ -503,7 +508,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesh_in = o3dtut.get_bunny_mesh()\n",
+    "bunny = o3d.data.Bunny()\n",
+    "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
+    "mesh.compute_vertex_normals()\n",
+    "\n",
     "print(\n",
     "    f'Input mesh has {len(mesh_in.vertices)} vertices and {len(mesh_in.triangles)} triangles'\n",
     ")\n",
@@ -576,7 +584,11 @@
    "outputs": [],
    "source": [
     "print(\"Generate data\")\n",
-    "mesh = o3dtut.get_bunny_mesh().subdivide_midpoint(number_of_iterations=2)\n",
+    "bunny = o3d.data.Bunny()\n",
+    "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
+    "mesh.compute_vertex_normals()\n",
+    "\n",
+    "mesh = mesh.subdivide_midpoint(number_of_iterations=2)\n",
     "vert = np.asarray(mesh.vertices)\n",
     "min_vert, max_vert = vert.min(axis=0), vert.max(axis=0)\n",
     "for _ in range(30):\n",
