--- a/docs/jupyter/geometry/voxelization.ipynb
+++ b/docs/jupyter/geometry/voxelization.ipynb
@@ -45,7 +45,10 @@
    "outputs": [],
    "source": [
     "print('input')\n",
-    "mesh = o3dtut.get_bunny_mesh()\n",
+    "bunny = o3d.data.Bunny()\n",
+    "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
+    "mesh.compute_vertex_normals()\n",
+    "\n",
     "# fit to unit cube\n",
     "mesh.scale(1 / np.max(mesh.get_max_bound() - mesh.get_min_bound()),\n",
     "           center=mesh.get_center())\n",
@@ -72,8 +75,12 @@
    "outputs": [],
    "source": [
     "print('input')\n",
+    "armadillo = o3d.data.Armadillo()\n",
+    "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
+    "mesh.compute_vertex_normals()\n",
+    "\n",
     "N = 2000\n",
-    "pcd = o3dtut.get_armadillo_mesh().sample_points_poisson_disk(N)\n",
+    "pcd = mesh.sample_points_poisson_disk(N)\n",
     "# fit to unit cube\n",
     "pcd.scale(1 / np.max(pcd.get_max_bound() - pcd.get_min_bound()),\n",
     "          center=pcd.get_center())\n",
@@ -249,7 +256,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesh = o3dtut.get_armadillo_mesh()\n",
+    "armadillo = o3d.data.Armadillo()\n",
+    "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
+    "mesh.compute_vertex_normals()\n",
     "\n",
     "output_filename = os.path.abspath(\"../../test_data/voxelized.ply\")\n",
     "camera_path = os.path.abspath(\"../../test_data/sphere.ply\")\n",
@@ -258,7 +267,7 @@
     "voxel_resolution = 128.0\n",
     "\n",
     "voxel_grid, voxel_carving, voxel_surface = voxel_carving(\n",
-    "    mesh, output_filename, camera_path, cubic_size, voxel_resolution)"
+    "    mesh, output_filename, camera_path, cubic_size, voxel_resolution)\n"
    ]
   },
   {
