--- a/docs/jupyter/geometry/iss_keypoint_detector.ipynb
+++ b/docs/jupyter/geometry/iss_keypoint_detector.ipynb
@@ -62,7 +62,10 @@
    "outputs": [],
    "source": [
     "# Compute ISS Keypoints on Armadillo\n",
-    "mesh = o3dtut.get_armadillo_mesh()\n",
+    "armadillo = o3d.data.Armadillo()\n",
+    "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
+    "mesh.compute_vertex_normals()\n",
+    "\n",
     "pcd = o3d.geometry.PointCloud()\n",
     "pcd.points = mesh.vertices\n",
     "\n",
@@ -101,7 +104,10 @@
    "outputs": [],
    "source": [
     "# Compute ISS Keypoints on Standford Bunny, changing the default parameters\n",
-    "mesh = o3dtut.get_bunny_mesh()\n",
+    "bunny = o3d.data.Bunny()\n",
+    "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
+    "mesh.compute_vertex_normals()\n",
+    "\n",
     "pcd = o3d.geometry.PointCloud()\n",
     "pcd.points = mesh.vertices\n",
     "\n",
