--- a/docs/jupyter/geometry/pointcloud.ipynb
+++ b/docs/jupyter/geometry/pointcloud.ipynb
@@ -202,8 +202,9 @@
    "outputs": [],
    "source": [
     "print(\"Load a polygon volume and use it to crop the original point cloud\")\n",
-    "vol = o3d.visualization.read_selection_polygon_volume(\n",
-    "    \"../../test_data/Crop/cropped.json\")\n",
+    "demo_crop_data = o3d.data.DemoCropPointCloud()\n",
+    "pcd = o3d.io.read_point_cloud(demo_crop_data.path_pointcloud)\n",
+    "vol = o3d.visualization.read_selection_polygon_volume(demo_crop_data.path_cropped_json)\n",
     "chair = vol.crop_point_cloud(pcd)\n",
     "o3d.visualization.draw_geometries([chair],\n",
     "                                  zoom=0.7,\n",
@@ -265,9 +266,9 @@
    "outputs": [],
    "source": [
     "# Load data\n",
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/fragment.ply\")\n",
-    "vol = o3d.visualization.read_selection_polygon_volume(\n",
-    "    \"../../test_data/Crop/cropped.json\")\n",
+    "demo_crop_data = o3d.data.DemoCropPointCloud()\n",
+    "pcd = o3d.io.read_point_cloud(demo_crop_data.path_pointcloud)\n",
+    "vol = o3d.visualization.read_selection_polygon_volume(demo_crop_data.path_cropped_json)\n",
     "chair = vol.crop_point_cloud(pcd)\n",
     "\n",
     "dists = pcd.compute_point_cloud_distance(chair)\n",
@@ -322,7 +323,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcl = o3dtut.get_bunny_mesh().sample_points_poisson_disk(number_of_points=2000)\n",
+    "bunny = o3d.data.Bunny()\n",
+    "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
+    "mesh.compute_vertex_normals()\n",
+    "\n",
+    "pcl = mesh.sample_points_poisson_disk(number_of_points=2000)\n",
     "hull, _ = pcl.compute_convex_hull()\n",
     "hull_ls = o3d.geometry.LineSet.create_from_triangle_mesh(hull)\n",
     "hull_ls.paint_uniform_color((1, 0, 0))\n",
@@ -421,7 +426,11 @@
    "outputs": [],
    "source": [
     "print(\"Convert mesh to a point cloud and estimate dimensions\")\n",
-    "pcd = o3dtut.get_armadillo_mesh().sample_points_poisson_disk(5000)\n",
+    "armadillo = o3d.data.Armadillo()\n",
+    "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
+    "mesh.compute_vertex_normals()\n",
+    "\n",
+    "pcd = mesh.sample_points_poisson_disk(5000)\n",
     "diameter = np.linalg.norm(\n",
     "    np.asarray(pcd.get_max_bound()) - np.asarray(pcd.get_min_bound()))\n",
     "o3d.visualization.draw_geometries([pcd])"
