added fountain dataset, updated jupyter notebooks to use dataset module

--- a/docs/jupyter/geometry/mesh.ipynb
+++ b/docs/jupyter/geometry/mesh.ipynb
@@ -37,6 +37,9 @@
    "outputs": [],
    "source": [
     "print(\"Testing mesh in Open3D...\")\n",
+    "armadillo = o3d.data.Armadillo()\n",
+    "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
+    "\n",
     "mesh = o3dtut.get_knot_mesh()\n",
     "print(mesh)\n",
     "print('Vertices:')\n",
