--- a/docs/jupyter/pipelines/icp_registration.ipynb
+++ b/docs/jupyter/pipelines/icp_registration.ipynb
@@ -91,8 +91,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = o3d.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_0.pcd\")\n",
-    "target = o3d.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_1.pcd\")\n",
+    "demo_icp_pcds = o3d.data.DemoICPPointClouds()\n",
+    "source = o3d.io.read_point_cloud(demo_icp_pcds.paths[0])\n",
+    "target = o3d.io.read_point_cloud(demo_icp_pcds.paths[1])\n",
     "threshold = 0.02\n",
     "trans_init = np.asarray([[0.862, 0.011, -0.507, 0.5],\n",
     "                         [-0.139, 0.967, -0.215, 0.7],\n",
