--- a/docs/jupyter/pipelines/robust_kernels.ipynb
+++ b/docs/jupyter/pipelines/robust_kernels.ipynb
@@ -87,8 +87,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = o3d.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_0.pcd\")\n",
-    "target = o3d.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_1.pcd\")\n",
+    "demo_icp_pcds = o3d.data.DemoICPPointClouds()\n",
+    "source = o3d.io.read_point_cloud(demo_icp_pcds.paths[0])\n",
+    "target = o3d.io.read_point_cloud(demo_icp_pcds.paths[1])\n",
     "trans_init = np.asarray([[0.862, 0.011, -0.507, 0.5],\n",
     "                         [-0.139, 0.967, -0.215, 0.7],\n",
     "                         [0.487, 0.255, 0.835, -1.4], [0.0, 0.0, 0.0, 1.0]])\n",
