--- a/docs/jupyter/t_pipelines/t_robust_kernel.ipynb
+++ b/docs/jupyter/t_pipelines/t_robust_kernel.ipynb
@@ -142,8 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_0.pcd\")\n",
-    "target = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_1.pcd\")"
+    "demo_icp_pcds = o3d.data.DemoICPPointClouds()\n",
+    "source = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[0])\n",
+    "target = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[1])"
    ]
   },
   {
