--- a/docs/jupyter/geometry/kdtree.ipynb
+++ b/docs/jupyter/geometry/kdtree.ipynb
@@ -44,7 +44,9 @@
    "source": [
     "print(\"Testing kdtree in Open3D...\")\n",
     "print(\"Load a point cloud and paint it gray.\")\n",
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/Feature/cloud_bin_0.pcd\")\n",
+    "\n",
+    "sample_pcd_data = o3d.data.SamplePointCloudPCD()\n",
+    "pcd = o3d.io.read_point_cloud(sample_pcd_data.path)\n",
     "pcd.paint_uniform_color([0.5, 0.5, 0.5])\n",
     "pcd_tree = o3d.geometry.KDTreeFlann(pcd)"
    ]
