--- a/docs/jupyter/geometry/pointcloud.ipynb
+++ b/docs/jupyter/geometry/pointcloud.ipynb
@@ -40,7 +40,8 @@
    "outputs": [],
    "source": [
     "print(\"Load a ply point cloud, print it, and render it\")\n",
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/fragment.ply\")\n",
+    "sample_pointcloud_ply = o3d.data.SamplePointCloudPLY()\n",
+    "pcd = o3d.io.read_point_cloud(sample_pointcloud_ply.path)\n",
     "print(pcd)\n",
     "print(np.asarray(pcd.points))\n",
     "o3d.visualization.draw_geometries([pcd],\n",
@@ -348,7 +349,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/fragment.ply\")\n",
+    "sample_pointcloud_ply = o3d.data.SamplePointCloudPLY()\n",
+    "pcd = o3d.io.read_point_cloud(sample_pointcloud_ply.path)\n",
     "\n",
     "with o3d.utility.VerbosityContextManager(\n",
     "        o3d.utility.VerbosityLevel.Debug) as cm:\n",
@@ -394,7 +396,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = o3d.io.read_point_cloud(\"../../test_data/fragment.pcd\")\n",
+    "sample_pointcloud_pcd = o3d.data.SamplePointCloudPCD()\n",
+    "pcd = o3d.io.read_point_cloud(sample_pointcloud_pcd.path)\n",
+    "\n",
     "plane_model, inliers = pcd.segment_plane(distance_threshold=0.01,\n",
     "                                         ransac_n=3,\n",
     "                                         num_iterations=1000)\n",
