--- a/docs/jupyter/geometry/surface_reconstruction.ipynb
+++ b/docs/jupyter/geometry/surface_reconstruction.ipynb
@@ -156,7 +156,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = o3dtut.get_eagle_pcd()\n",
+    "eagle = o3d.data.Eagle()\n",
+    "pcd = o3d.io.read_point_cloud(eagle.path)\n",
+    "\n",
     "print(pcd)\n",
     "o3d.visualization.draw_geometries([pcd],\n",
     "                                  zoom=0.664,\n",
@@ -256,7 +258,6 @@
    "source": [
     "bunny = o3d.data.Bunny()\n",
     "gt_mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
-    "gt_mesh.compute_vertex_normals()\n",
     "\n",
     "pcd = gt_mesh.sample_points_poisson_disk(5000)\n",
     "pcd.normals = o3d.utility.Vector3dVector(np.zeros(\n",
