--- a/docs/jupyter/pipelines/multiway_registration.ipynb
+++ b/docs/jupyter/pipelines/multiway_registration.ipynb
@@ -46,9 +46,9 @@
    "source": [
     "def load_point_clouds(voxel_size=0.0):\n",
     "    pcds = []\n",
-    "    for i in range(3):\n",
-    "        pcd = o3d.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_%d.pcd\" %\n",
-    "                                      i)\n",
+    "    demo_icp_pcds = o3d.data.DemoICPPointClouds()\n",
+    "    for path in demo_icp_pcds.paths:\n",
+    "        pcd = o3d.io.read_point_cloud(path)\n",
     "        pcd_down = pcd.voxel_down_sample(voxel_size=voxel_size)\n",
     "        pcds.append(pcd_down)\n",
     "    return pcds"
