--- a/docs/jupyter/t_pipelines/t_icp_registration.ipynb
+++ b/docs/jupyter/t_pipelines/t_icp_registration.ipynb
@@ -221,8 +221,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_0.pcd\")\n",
-    "target = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_1.pcd\")\n",
+    "demo_icp_pcds = o3d.data.DemoICPPointClouds()\n",
+    "source = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[0])\n",
+    "target = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[1])\n",
     "\n",
     "# For Colored-ICP `colors` attribute must be of the same dtype as `positions` and `normals` attribute.\n",
     "source.point[\"colors\"] = source.point[\"colors\"].to(\n",
@@ -495,8 +496,9 @@
    "outputs": [],
    "source": [
     "# Input point-clouds\n",
-    "source = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_0.pcd\")\n",
-    "target = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_1.pcd\")"
+    "demo_icp_pcds = o3d.data.DemoICPPointClouds()\n",
+    "source = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[0])\n",
+    "target = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[1])"
    ]
   },
   {
@@ -691,8 +693,9 @@
    "outputs": [],
    "source": [
     "# Input point-clouds\n",
-    "source = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_0.pcd\")\n",
-    "target = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_1.pcd\")"
+    "demo_icp_pcds = o3d.data.DemoICPPointClouds()\n",
+    "source = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[0])\n",
+    "target = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[1])"
    ]
   },
   {
@@ -994,8 +997,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_0.pcd\")\n",
-    "target = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_1.pcd\")\n",
+    "demo_icp_pcds = o3d.data.DemoICPPointClouds()\n",
+    "source = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[0])\n",
+    "target = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[1])\n",
     "\n",
     "# Initial guess transform between the two point-cloud.\n",
     "# ICP algortihm requires a good initial allignment to converge efficiently.\n",
@@ -1053,8 +1057,9 @@
    "outputs": [],
    "source": [
     "# Input point-clouds\n",
-    "source = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_0.pcd\")\n",
-    "target = o3d.t.io.read_point_cloud(\"../../test_data/ICP/cloud_bin_1.pcd\")"
+    "demo_icp_pcds = o3d.data.DemoICPPointClouds()\n",
+    "source = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[0])\n",
+    "target = o3d.t.io.read_point_cloud(demo_icp_pcds.paths[1])"
    ]
   },
   {
@@ -1267,8 +1272,9 @@
    "outputs": [],
    "source": [
     "print(\"1. Load two point clouds and show initial pose\")\n",
-    "source = o3d.t.io.read_point_cloud(\"../../test_data/ColoredICP/frag_115.ply\")\n",
-    "target = o3d.t.io.read_point_cloud(\"../../test_data/ColoredICP/frag_116.ply\")\n",
+    "demo_cicp_pcds = o3d.data.DemoColoredICPPointClouds()\n",
+    "source = o3d.t.io.read_point_cloud(demo_cicp_pcds.paths[0])\n",
+    "target = o3d.t.io.read_point_cloud(demo_cicp_pcds.paths[1])\n",
     "\n",
     "# For Colored-ICP `colors` attribute must be of the same dtype as `positions` and `normals` attribute.\n",
     "source.point[\"colors\"] = source.point[\"colors\"].to(\n",
