improved docstrings, fixed issue with sample fountain dataset

--- a/docs/jupyter/geometry/distance_queries.ipynb
+++ b/docs/jupyter/geometry/distance_queries.ipynb
@@ -77,9 +77,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load mesh as open3d.t.geometry.TriangleMesh\n",
+    "# Load mesh and convert to open3d.t.geometry.TriangleMesh\n",
     "armadillo_data = o3d.data.Armadillo()\n",
-    "mesh = o3d.t.io.read_triangle_mesh(armadillo_data.path)\n",
+    "mesh = o3d.io.read_triangle_mesh(armadillo_data.path)\n",
+    "mesh = o3d.t.geometry.TriangleMesh.from_legacy(mesh)\n",
     "\n",
     "# Create a scene and add the triangle mesh\n",
     "scene = o3d.t.geometry.RaycastingScene()\n",
